# bastar_arm

./: README.md
src/: left.txt  left_expectation.txt  right.txt  right_expectation.txt  task1.sh  task2.sh  task3.sh
src/Yolov5_ros/: detect.py  detect_box.py  detect_cattle.py  detect_ruler.py  detect_task_one.py  detect_task_three.py  detect_task_two.py
src/task1/files/: kinect_calibration.yaml  realsense_trajectory
src/task1/launch/: marker_track.launch
src/task1/msg/: MyList.msg  MyListArray.msg
src/task1/script/: left_hand_camera.py  myCalibration.py  right_hand_camera.py
src/task1/src/: Realsense_info1.cpp  Realsense_info1.h  state_machine.cpp
src/task2/: CMakeLists.txt  package.xml
src/task2/script/: paizhao.py  yuyifenge.py
src/task2/script/unet/: unet_parts.py
src/task2/src/: Realsense_info2.cpp  Realsense_info2.h  main_two.cpp  server_two.cpp  shiyan.cpp  state_machine_two.cpp
src/task3/: CMakeLists.txt
src/task3/script/: color_extract.py  right_hand_box.py
src/task3/src/: Realsense_info3.cpp  elbowcontroller.h  state_machine_three.cpp
src/wrc_hit_lib/: CMakeLists.txt  package.xml
src/wrc_hit_lib/include/wrc_hit_lib/: MyListArray.h  baxtercontroller.h  camera_info.h  forth_task.h
src/wrc_hit_lib/src/: MyList.h  MyListArray.h  Realsense_info.cpp  Realsense_info.h  baxtercontroller.cpp  camera_info.cpp  elbowcontroller.cpp  elbowcontroller.h  first_task.cpp  first_task.h  forth_task.cpp  main.cpp  test.cpp  third_task.cpp  third_task.h
task1/: CMakeLists.txt  package.xml
task1/files/: baxter_trajectory
task1/launch/: task1.launch
task1/script/: left_hand_camera.py
task1/src/: Realsense_info1.cpp  Realsense_info1.h  armcontrol.cpp  main.cpp  server.cpp  state_machine.cpp
task1/srv/: GetPoint.srv
task2/msg/: MyList.msg
task2/script/: bubaocuo.py  myCalibration.py  subtest.py
task2/src/: Realsense_info2.cpp  armcontrol_two.cpp  baxtercontroller.h  elbowcontroller.h  state_machine_two.cpp
task3/: CMakeLists.txt  package.xml
task3/script/: ChangeCamera.py  fearless_hope.py  left_hand_camera.py  paizhao.py
task3/src/: Realsense_info3.cpp  Realsense_info3.h  main_three.cpp  server_three.cpp  shiyan.cpp  state_machine_three.cpp
(+5 files in other folders)
